--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
 </head>
 <body>
     <header> 
-        <a href="#">AAA</a>
-        <a href="#">AAA</a>
-        <a href="#">AAA</a>
+        <img src="Imagens/logo-semfundo.png" alt="">
+        <div id="links_acesso">
+            <input type="search" name="pesquisar" id="pesquisar">
+            <a href="#"><img src="Imagens/lupa_icon_nav.png" alt=""></a>
+            <a href="#"> <img src="Imagens/usuário_icon_nav.png" alt=""></a>
+            <a href="#"><img src="Imagens/coração_icon_nav.png" alt=""></a>
+        </div>
         <nav> 
             Ver mais.
         </nav>
     </header>
     <main> 
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, sequi similique perferendis iusto veniam enim amet. Dolorum similique expedita quam rem numquam consequatur dignissimos optio commodi eum, odio iusto sequi!
+        <h1>Tá Que Tá</h1>
     </main>
     <footer> 
-
+        Criado por: <a href="https://github.com/Vitorezy" target="_blank"> Vitorezy </a>
     </footer>
 </body>
 </html>
