--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
 </head>
 <body>
     <header> 
-        <img src="Imagens/logo-semfundo.png" alt="">
+        <img src="Imagens/logo-semfundo.png" alt="Logo Tá que Tá">
         <div id="links_acesso">
-            <input type="search" name="pesquisar" id="pesquisar">
-            <a href="#"><img src="Imagens/lupa_icon_nav.png" alt=""></a>
-            <a href="#"> <img src="Imagens/usuário_icon_nav.png" alt=""></a>
-            <a href="#"><img src="Imagens/coração_icon_nav.png" alt=""></a>
+            <a href="#"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario"></a>
+            <a href="#"><img src="Imagens/coração_icon_nav.png" alt="Botão de ir pra Itens Desejados"></a>
         </div>
         <nav> 
             Ver mais.
+            <div id="conteudo"> <div id="imagem_exibição_nav"> </div> </div>
         </nav>
     </header>
     <main> 
