--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
 </head>
 <body>
     <header> 
-        <img src="Imagens/logo-semfundo.png" alt="Logo Tá que Tá">
+        <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá">
         <div id="links_acesso">
             <a href="#"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario"></a>
             <a href="#"><img src="Imagens/coração_icon_nav.png" alt="Botão de ir pra Itens Desejados"></a>
         </div>
         <nav> 
-            Ver mais.
-            <div id="conteudo"> <div id="imagem_exibição_nav"> </div> </div>
+            Clique para ver mais coleções!
+            <div id="conteudo">  </div>
         </nav>
+        <div id="nav_aberta"> <div id="conteudo"> <div id="imagem_exibição_nav"> </div> </div> </div>
     </header>
     <main> 
         <h1>Tá Que Tá</h1>
+        <h2>Trabalhe Conosco!</h2>
+        <div id="foto_donos"></div>
+
     </main>
     <footer> 
         Criado por: <a href="https://github.com/Vitorezy" target="_blank"> Vitorezy </a>
