--- a/Quem somos.html
+++ b/Quem somos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Inicial</title>
+    <title>Tá que Tá</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Imagens/favicon.ico">
     <script defer src="script.js"></script>
@@ -76,7 +76,7 @@
     </header>
     <main> 
         <h1>Tá Que Tá</h1>
-        <h2>Peças</h2>
+        <h2>Trabalhe Conosco!</h2>
         <div id="foto_home"></div>
         
     </main>
