--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
                 </div> 
                 <div class="imagem_exibição_nav" style="background-image: url(Imagens/imagemcolecao7.jpg);"> 
                     <div class="escrita_exibição_imagem_nav">
-                        <h1>Coleção da Cultura Afro</h1>
+                        <h1>Coleção Cultura Afro</h1>
                         <p>Coleção criada por Beatriz </p>
                     </div>      
                 </div> 
                 <div class="imagem_exibição_nav" style="background-image: url(Imagens/imagemcolecao8.jpg);">
                     <div class="escrita_exibição_imagem_nav" >
-                        <h1>Coleção Monocromática</h1>
+                        <h1>Coleção Skate</h1>
                         <p>Coleção criada por Beatriz </p>
                     </div>       
                 </div>
