mexendo no index

--- a/Quem somos.html
+++ b/Quem somos.html
@@ -60,7 +60,7 @@
                 </div> 
                 <div class="imagem_exibição_nav" style="background-image: url(Imagens/imagemcolecao7.jpg);"> 
                     <div class="escrita_exibição_imagem_nav">
-                        <h1>Coleção Cultura Afro</h1>
+                        <h1>Coleção Afro</h1>
                         <p>Coleção criada por Beatriz </p>
                     </div>      
                 </div> 
