Criando novas paginas e reorganizando os Estilos CSS

--- a/index.html
+++ b/index.html
@@ -8,19 +8,18 @@
     481 - 768 tablet
     769 - 1024 telas laptop
     1025 - 1200 pc-->
-    <link rel="stylesheet" href="pc.css" media="all">
-    <link rel="stylesheet" href="teladesk.css" media="screen and (min-width: 1024px) and (max-width: 1440px)">
-    <link rel="stylesheet" href="telatab.css" media="screen and (min-width: 667px) and (max-width: 1024px)">
-    <link rel="stylesheet" href="telacel.css" media="screen and (min-width: 320px) and (max-width: 667px)">
+    <link rel="stylesheet" href="Estilos/Geral.css">
+    <link rel="stylesheet" href="Estilos/index.css" media="all">
     <link rel="shortcut icon" href="Imagens/favicon.ico">
-    <script defer src="script.js"></script>
+    <script defer src="../Tá que Tá/Script-js/script.js"></script>
 </head>
-<body>
+<body  id="inicio">
     <header> 
         <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá">
         <div id="links_acesso">
             <a href="Index.html"> Página inicial</a>
             <a href="Quem somos.html"> Quem Somos</a>
+            <a href="Artistas.html"> Nossos artistas</a>
             <a href="#"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario"></a>
         </div>
         <nav> 
@@ -168,6 +167,9 @@
         
         
     </main>
+    <a href="#inicio">
+        <img id="botão-voltar" src="Imagens/usuário_icon_nav.png" alt="">
+    </a>
     <footer> 
         Criado por: <a href="https://github.com/Vitorezy" target="_blank"> Vitorezy </a>
     </footer>
