evoluindo na estilização e animação das paginas

--- a/Artistas.html
+++ b/Artistas.html
@@ -17,10 +17,10 @@
     <header> 
         <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá">
         <div id="links_acesso">
-            <a href="Index.html"> Página inicial</a>
-            <a href="Quem somos.html"> Quem Somos</a>
-            <a href="Artistas.html"> Nossos artistas</a>
-            <a href="#"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario"></a>
+            <a href="Index.html"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" title="aaa"></a>
+            <a href="Quem somos.html"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" tabindex="1" title="aaa"></a>
+            <a href="Artistas.html"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" tabindex="1" title="aaa"></a>
+            <a href="#"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" tabindex="1" title="aaa"></a>
         </div>
         <nav> 
             Filtrar coleções!
@@ -62,37 +62,55 @@
                     <img src="Imagens/usuário_icon_nav.png" alt="">
                     <h2>Nome do Artista</h2>
                 </div>
-                <div class="imagem_do_artista"></div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, laborum, autem modi perspiciatis consequatur corrupti illo facere iure accusantium, doloribus eos cumque possimus expedita ducimus suscipit ex facilis. Fugit, animi.</p>
+                <div class="imagem_do_artista">
+
+                </div>
+                
+                    <div class="texto-artista">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, laborum, autem modi perspiciatis consequatur corrupti illo facere iure accusantium, doloribus eos cumque possimus expedita ducimus suscipit ex facilis. Fugit, animi.</p>
+                    </div>
             </div>
             <div id="artista2" style="background-image: url(Imagens/wallpaper.webp);">
                 <div class="autor-identificação">
                     <img src="Imagens/usuário_icon_nav.png" alt="">
                     <h2>Nome do Artista</h2>
                 </div>
-                <div class="imagem_do_artista"></div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, laborum, autem modi perspiciatis consequatur corrupti illo facere iure accusantium, doloribus eos cumque possimus expedita ducimus suscipit ex facilis. Fugit, animi.</p>
+                <div class="imagem_do_artista">
+
+                </div>
+                            <div class="texto-artista">
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, laborum, autem modi perspiciatis consequatur corrupti illo facere iure accusantium, doloribus eos cumque possimus expedita ducimus suscipit ex facilis. Fugit, animi.</p>
+                            </div>
+                        
             </div>
             <div id="artista3" style="background-image: url(Imagens/wallpaper2.jpg);"> 
                 <div class="autor-identificação">
                     <img src="Imagens/usuário_icon_nav.png" alt="">
                     <h2>Nome do Artista</h2>
                 </div>
-                <div class="imagem_do_artista"></div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, laborum, autem modi perspiciatis consequatur corrupti illo facere iure accusantium, doloribus eos cumque possimus expedita ducimus suscipit ex facilis. Fugit, animi.</p>
+                <div class="imagem_do_artista">
+
+                </div>
+                    <div class="texto-artista">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, laborum, autem modi perspiciatis consequatur corrupti illo facere iure accusantium, doloribus eos cumque possimus expedita ducimus suscipit ex facilis. Fugit, animi.</p>
+                    </div>
             </div>
             <div id="artista4" style="background-image: url(Imagens/wallpaper3.jpg); margin-bottom: 50px;">
                 <div class="autor-identificação">
                     <img src="Imagens/usuário_icon_nav.png" alt="">
                     <h2>Nome do Artista</h2>
                 </div>
-                <div class="imagem_do_artista"></div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, laborum, autem modi perspiciatis consequatur corrupti illo facere iure accusantium, doloribus eos cumque possimus expedita ducimus suscipit ex facilis. Fugit, animi.</p>
+                <div class="imagem_do_artista">
+
+                </div>
+                    <div class="texto-artista">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, laborum, autem modi perspiciatis consequatur corrupti illo facere iure accusantium, doloribus eos cumque possimus expedita ducimus suscipit ex facilis. Fugit, animi.</p>
+                    </div>
             </div>
         </div>
     </main>
-    <a href="#inicio">
-        <img id="botão-voltar" src="Imagens/usuário_icon_nav.png" alt="">
+    <a id="botão-voltar" href="#inicio" title="Voltar para o início">
+        <img id="img-botão-voltar" src="Imagens/usuário_icon_nav.png" alt="">
     </a>
     <footer> 
         Criado por: <a href="https://github.com/Vitorezy" target="_blank"> Vitorezy </a>
