--- a/Quem somos.html
+++ b/Quem somos.html
@@ -13,10 +13,10 @@
     <header> 
         <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá">
         <div id="links_acesso">
-            <a href="Index.html"> Página inicial</a>
-            <a href="Quem somos.html"> Quem Somos</a>
-            <a href="Artistas.html"> Nossos artistas</a>
-            <a href="#"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario"></a>
+            <a href="Index.html"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" title="aaa"></a>
+            <a href="Quem somos.html"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" tabindex="1" title="aaa"></a>
+            <a href="Artistas.html"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" tabindex="1" title="aaa"></a>
+            <a href="#"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" tabindex="1" title="aaa"></a>
         </div>
         <nav> 
             Clique para ver mais coleções!
@@ -76,8 +76,8 @@
         <div id="foto_home"></div>
         
     </main>
-    <a href="#inicio">
-        <img id="botão-voltar" src="Imagens/usuário_icon_nav.png" alt="">
+    <a id="botão-voltar" href="#inicio" title="Voltar para o início">
+        <img id="img-botão-voltar" src="Imagens/usuário_icon_nav.png" alt="">
     </a>
     <footer> 
         Criado por: <a href="https://github.com/Vitorezy" target="_blank"> Vitorezy </a>
