--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="Estilos/Geral.css">
     <link rel="stylesheet" href="Estilos/index.css" media="all">
     <link rel="shortcut icon" href="Imagens/favicon.ico">
-    <script defer src="../Tá que Tá/Script-js/script.js"></script>
+    <script defer src="Script-js/script.js"></script>
 </head>
 <body  id="inicio">
     <header> 
