--- a/Quem somos.html
+++ b/Quem somos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Estilos/Geral.css" media="all">
     <link rel="stylesheet" href="Estilos/quemsomos.css">
     <link rel="shortcut icon" href="Imagens/favicon.ico">
-    <script defer src="../Tá que Tá/Script-js/script.js"></script>
+    <script defer src="Script-js/script.js"></script>
 </head>
 <body id="inicio">
     <header> 
