--- a/Artistas.html
+++ b/Artistas.html
@@ -22,7 +22,7 @@
             <a href="Artistas.html"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" tabindex="1" title="aaa"></a>
             <a href="#"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" tabindex="1" title="aaa"></a>
         </div>
-        <nav> 
+        <nav title="Clique para abrir, Dê dois cliques para fechar."> 
             Filtrar coleções!
             
         </nav>
