--- a/Quem somos.html
+++ b/Quem somos.html
@@ -21,7 +21,7 @@
         <nav> 
             Clique para ver mais coleções!
         </nav>
-        <div id="nav_aberta"> 
+        <div id="nav_aberta" title="Clique para abrir, Dê dois cliques para fechar."> 
              
             <div class="imagem_exibição_nav" style="background-image: url(Imagens/imagemcolecao1.jpg);"> 
                 <div class="escrita_exibição_imagem_nav" >
