--- a/Quem somos.html
+++ b/Quem somos.html
@@ -13,7 +13,7 @@
     <header> 
         <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá">
         <div id="links_acesso">
-            <a href="Index.html"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" title="aaa"></a>
+            <a href="Ta-que-Ta/"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" title="aaa"></a>
             <a href="Quem somos.html"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" tabindex="1" title="aaa"></a>
             <a href="Artistas.html"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" tabindex="1" title="aaa"></a>
             <a href="#"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" tabindex="1" title="aaa"></a>
