--- a/Artistas.html
+++ b/Artistas.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <title>Pagina Inicial</title>
     <!--320 - 480 celular
     481 - 768 tablet
@@ -17,7 +18,7 @@
     <header> 
         <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá">
         <div id="links_acesso">
-            <a href="Ta-que-Ta/"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" title="aaa"></a>
+            <a href="Index.html"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" title="aaa"></a>
             <a href="Quem somos.html"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" tabindex="1" title="aaa"></a>
             <a href="Artistas.html"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" tabindex="1" title="aaa"></a>
             <a href="#"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" tabindex="1" title="aaa"></a>
