--- a/Artistas.html
+++ b/Artistas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-    <title>Pagina Inicial</title>
+    <title>Nossos Artistas</title>
     <!--320 - 480 celular
     481 - 768 tablet
     769 - 1024 telas laptop
