--- a/Quem somos.html
+++ b/Quem somos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-    <title>Tá que Tá</title>
+    <title>Quem somos</title>
     <link rel="stylesheet" href="Estilos/Geral.css" media="all">
     <link rel="stylesheet" href="Estilos/quemsomos.css">
     <link rel="shortcut icon" href="Imagens/favicon.ico">
