--- a/Artistas.html
+++ b/Artistas.html
@@ -16,18 +16,17 @@
 </head>
 <body id="inicio">
     <header> 
-        <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá">
+        <a href="Quem somos.html"> <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá"> </a>
         <div id="links_acesso">
-            <a href="index.html"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" title="aaa"></a>
-            <a href="Quem somos.html"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" tabindex="1" title="aaa"></a>
-            <a href="Artistas.html"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" tabindex="1" title="aaa"></a>
-            <a href="#"> <img src="Imagens/usuário_icon_nav.png" alt="Botão de ir pro Usúario" tabindex="1" title="aaa"></a>
+            <a href="index.html"> <img src="Imagens/homeIcon.png" alt="Botão de ir pro Usúario" title="Página inicial"></a>
+            <a href="Artistas.html"> <img src="Imagens/artistaIcon.png" alt="Botão de ir pro Usúario" tabindex="1" title="Nossos artistas"></a>
+            <a href="Quem somos.html"> <img src="Imagens/Empresa.png" alt="Botão de ir pro Usúario" tabindex="1" title="Quem somos"></a>
+            <a href="#"> <img src="Imagens/userIcon.png" alt="Botão de ir pro Usúario" tabindex="1" title="Usuário"></a>
         </div>
-        <nav title="Clique para abrir, Dê dois cliques para fechar."> 
-            Filtrar coleções!
-            
+        <nav tabindex="1" title="Clique para abrir/fechar"> 
+            Filtrar por artista!
         </nav>
-        <div id="nav_aberta">  
+        <div id="nav_aberta" style="height: 0%;">   
                    <a href="#artista1" class="imagem_exibição_nav" style="background-image: url(Imagens/imagemcolecao1.jpg);">
                         <div class="escrita_exibição_imagem_nav" >
                             <h1>Artista 1</h1>
@@ -111,7 +110,7 @@
         </div>
     </main>
     <a id="botão-voltar" href="#inicio" title="Voltar para o início">
-        <img id="img-botão-voltar" src="Imagens/usuário_icon_nav.png" alt="">
+        <img id="img-botão-voltar" src="Imagens/setaCima.png" alt="">
     </a>
     <footer> 
         Criado por: <a href="https://github.com/Vitorezy" target="_blank"> Vitorezy </a>
