--- a/areaUsuário.html
+++ b/areaUsuário.html
@@ -24,7 +24,8 @@
             <a href="areaUsuário.html"> <img src="Imagens/userIcon.png" alt="Botão de ir pro Usúario" tabindex="1" title="Usuário"></a>
         </div>
     </header>
-    <main> 
+    <main>    
+        </div>
         <section id="opções_usuário" style="width: 35%;">
             <div id="opções_usuário_abrir_fechar" style="width: 10%;">
                 <img id="seta_menu_opcoes_usuario" src="Imagens/seta_esquerda.png" alt="">
