--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
       </div>
       <nav tabindex="1" title="Clique para abrir/fechar">Filtrar coleções!</nav>
       <div id="nav_aberta" style="height: 0%">
-        <input type="checkbox" name="" id="btnNavTodas">
-        <label for="btnNavTodas"
+        <input type="checkbox" name="" id="btnNavTodas" checked />
+        <label
+          for="btnNavTodas"
           tabindex="1"
           class="imagem_exibição_nav"
           style="background-image: url(Imagens/imagemcolecao1.jpg)"
@@ -63,8 +64,9 @@
             <p>Coleções criadas por Beatriz</p>
           </div>
         </label>
-        <input type="checkbox" name="" id="btnNavInverno">
-        <label for="btnNavInverno"
+        <input type="checkbox" name="" id="btnNavInverno" checked />
+        <label
+          for="btnNavInverno"
           tabindex="1"
           class="imagem_exibição_nav"
           style="background-image: url(Imagens/imagemcolecao1.jpg)"
@@ -74,8 +76,9 @@
             <p>Coleção criada por Beatriz</p>
           </div>
         </label>
-        <input type="checkbox" name="" id="btnNavVerao">
-        <label for="btnNavVerao"
+        <input type="checkbox" name="" id="btnNavVerao" checked />
+        <label
+          for="btnNavVerao"
           tabindex="1"
           class="imagem_exibição_nav"
           style="background-image: url(Imagens/imagemcolecao2.jpg)"
@@ -85,8 +88,9 @@
             <p>Coleção criada por Beatriz</p>
           </div>
         </label>
-        <input type="checkbox" name="" id="btnNavOutono">
-        <label for="btnNavOutono"
+        <input type="checkbox" name="" id="btnNavOutono" checked />
+        <label
+          for="btnNavOutono"
           tabindex="1"
           class="imagem_exibição_nav"
           style="background-image: url(Imagens/imagemcolecao3.jpg)"
@@ -96,8 +100,9 @@
             <p>Coleção criada por Beatriz</p>
           </div>
         </label>
-        <input type="checkbox" name="" id="btnNavPrimavera">
-        <label for="btnNavPrimavera"
+        <input type="checkbox" name="" id="btnNavPrimavera" checked />
+        <label
+          for="btnNavPrimavera"
           tabindex="1"
           class="imagem_exibição_nav"
           style="background-image: url(Imagens/imagemcolecao4.jpg)"
@@ -107,8 +112,9 @@
             <p>Coleção criada por Beatriz</p>
           </div>
         </label>
-        <input type="checkbox" name="" id="btnNavFestas">
-        <label for="btnNavFestas"
+        <input type="checkbox" name="" id="btnNavFestas" checked />
+        <label
+          for="btnNavFestas"
           tabindex="1"
           class="imagem_exibição_nav"
           style="background-image: url(Imagens/imagemcolecao5.jpg)"
@@ -118,8 +124,9 @@
             <p>Coleção criada por Beatriz</p>
           </div>
         </label>
-        <input type="checkbox" name="" id="btnNavAfro">
-        <label for="btnNavAfro"
+        <input type="checkbox" name="" id="btnNavAfro" checked />
+        <label
+          for="btnNavAfro"
           tabindex="1"
           class="imagem_exibição_nav"
           style="background-image: url(Imagens/imagemcolecao7.jpg)"
@@ -185,7 +192,7 @@
         </form>
       </div>
       <h1>Tá Que Tá</h1>
-      <h2>Peças</h2>
+      <h2 id="mensagem_selecao">Peças</h2>
       <div id="pecas_home_container">
         <div class="peca_home colecao_inverno">
           <div class="escrita_exibição_imagem_pecas">
