atualizando numero de paginas

--- a/Quem somos.html
+++ b/Quem somos.html
@@ -12,7 +12,7 @@
   </head>
   <body id="inicio">
     <header>
-      <a href="#inicio">
+      <a href="Quem somos.html">
         <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" />
       </a>
       <div id="links_acesso">
@@ -45,71 +45,50 @@
           />
         </div>
       </div>
-      <nav tabindex="1" title="Clique para abrir/fechar">Filtrar coleções!</nav>
+      <nav tabindex="1" title="Clique para abrir/fechar">
+        Filtrar por artista!
+      </nav>
       <div id="nav_aberta" style="height: 0%">
-        <div
+        <a
+          href="#artista1"
           class="imagem_exibição_nav"
           style="background-image: url(Imagens/imagemcolecao1.jpg)"
         >
           <div class="escrita_exibição_imagem_nav">
-            <h1>todas</h1>
-            <p>Coleções criadas por Beatriz</p>
+            <h1>Artista 1</h1>
+            <p>Artista maneirao</p>
           </div>
-        </div>
-        <div
+        </a>
+        <a
+          href="#artista2"
           class="imagem_exibição_nav"
           style="background-image: url(Imagens/imagemcolecao1.jpg)"
         >
           <div class="escrita_exibição_imagem_nav">
-            <h1>Inverno</h1>
-            <p>Coleção criada por Beatriz</p>
+            <h1>Artista 2</h1>
+            <p>Artista maneirao</p>
           </div>
-        </div>
-        <div
+        </a>
+        <a
+          href="#artista3"
           class="imagem_exibição_nav"
           style="background-image: url(Imagens/imagemcolecao2.jpg)"
         >
           <div class="escrita_exibição_imagem_nav">
-            <h1>Verão</h1>
-            <p>Coleção criada por Beatriz</p>
+            <h1>Artista 3</h1>
+            <p>Artista maneirao</p>
           </div>
-        </div>
-        <div
+        </a>
+        <a
+          href="#artista4"
           class="imagem_exibição_nav"
           style="background-image: url(Imagens/imagemcolecao3.jpg)"
         >
           <div class="escrita_exibição_imagem_nav">
-            <h1>Outono</h1>
-            <p>Coleção criada por Beatriz</p>
+            <h1>Artista 4</h1>
+            <p>Artista maneirao</p>
           </div>
-        </div>
-        <div
-          class="imagem_exibição_nav"
-          style="background-image: url(Imagens/imagemcolecao4.jpg)"
-        >
-          <div class="escrita_exibição_imagem_nav">
-            <h1>Primavera</h1>
-            <p>Coleção criada por Beatriz</p>
-          </div>
-        </div>
-        <div
-          class="imagem_exibição_nav"
-          style="background-image: url(Imagens/imagemcolecao5.jpg)"
-        >
-          <div class="escrita_exibição_imagem_nav">
-            <h1>Festas</h1>
-            <p>Coleção criada por Beatriz</p>
-          </div>
-        </div>
-        <div
-          class="imagem_exibição_nav"
-          style="background-image: url(Imagens/imagemcolecao7.jpg)"
-        >
-          <div class="escrita_exibição_imagem_nav">
-            <h1>Afro</h1>
-            <p>Coleção criada por Beatriz</p>
-          </div>
-        </div>
+        </a>
       </div>
     </header>
     <main>
@@ -168,6 +147,85 @@
       <h1>Tá Que Tá</h1>
       <h2>Trabalhe Conosco!</h2>
       <div id="foto_home"></div>
+
+      <div id="artistas">
+      <h2>nossos Artistas</h2>
+      <div id="flex-container">
+        <div id="artista1" style="background-image: url(Imagens/wallpaper.jpg)">
+          <div class="autor-identificação">
+            <img src="Imagens/usuário_icon_nav.png" alt="" />
+            <h2>Nome do Artista</h2>
+          </div>
+          <div class="imagem_do_artista"></div>
+
+          <div class="texto-artista">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. At,
+              laborum, autem modi perspiciatis consequatur corrupti illo facere
+              iure accusantium, doloribus eos cumque possimus expedita ducimus
+              suscipit ex facilis. Fugit, animi.
+            </p>
+          </div>
+        </div>
+        <div
+          id="artista2"
+          style="background-image: url(Imagens/wallpaper.webp)"
+        >
+          <div class="autor-identificação">
+            <img src="Imagens/usuário_icon_nav.png" alt="" />
+            <h2>Nome do Artista</h2>
+          </div>
+          <div class="imagem_do_artista"></div>
+          <div class="texto-artista">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. At,
+              laborum, autem modi perspiciatis consequatur corrupti illo facere
+              iure accusantium, doloribus eos cumque possimus expedita ducimus
+              suscipit ex facilis. Fugit, animi.
+            </p>
+          </div>
+        </div>
+        <div
+          id="artista3"
+          style="background-image: url(Imagens/wallpaper2.jpg)"
+        >
+          <div class="autor-identificação">
+            <img src="Imagens/usuário_icon_nav.png" alt="" />
+            <h2>Nome do Artista</h2>
+          </div>
+          <div class="imagem_do_artista"></div>
+          <div class="texto-artista">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. At,
+              laborum, autem modi perspiciatis consequatur corrupti illo facere
+              iure accusantium, doloribus eos cumque possimus expedita ducimus
+              suscipit ex facilis. Fugit, animi.
+            </p>
+          </div>
+        </div>
+        <div
+          id="artista4"
+          style="
+            background-image: url(Imagens/wallpaper3.jpg);
+            margin-bottom: 50px;
+          "
+        >
+          <div class="autor-identificação">
+            <img src="Imagens/usuário_icon_nav.png" alt="" />
+            <h2>Nome do Artista</h2>
+          </div>
+          <div class="imagem_do_artista"></div>
+          <div class="texto-artista">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. At,
+              laborum, autem modi perspiciatis consequatur corrupti illo facere
+              iure accusantium, doloribus eos cumque possimus expedita ducimus
+              suscipit ex facilis. Fugit, animi.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
     </main>
     <a id="botão-voltar" href="#inicio" title="Voltar para o início">
       <img id="img-botão-voltar" src="Imagens/setaCima.png" alt="" />
