Criando area de suporte

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <div id="caixa_login" style="display: none">
         <h1 style="display: inline">Login</h1>
         <label for="fechar_login">
-          <img src="Imagens/fecharIcon.png" alt=""
+          <img class="botaofechar" src="Imagens/fecharIcon.png" alt=""
         /></label>
         <button id="fechar_login" style="display: none"></button>
         <form id="formulario" method="get" action="areaUsuário.html">
@@ -281,8 +281,35 @@
       </div>
     </main>
     <a id="botão-voltar" href="#inicio" title="Voltar para o início">
-      <img id="img-botão-voltar" src="Imagens/setaCima.png" alt="" />
+      <img
+        class="botaofechar"
+        id="img-botão-voltar"
+        src="Imagens/setaCima.png"
+        alt=""
+      />
     </a>
+    <div id="Caixa_suporte">
+      <h1>Suporte</h1>
+      <img
+        class="botaofechar"
+        src="Imagens/fecharIcon.png"
+        alt=""
+        style="right: 0%; position: absolute; width: 70px"
+      />
+      <div id="container_mensagens"> 
+        
+      </div>
+      <div id="container_botoes_suporte">
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+      </div>
+    </div>
+
+    <div id="botão-suporte" title="Suporte">
+      <img id="img-botão-suporte" src="Imagens/suporteIcon.png" alt="" />
+    </div>
     <footer>
       Criado por:
       <a href="https://github.com/Vitorezy" target="_blank"> Vitorezy </a>
